Fix overflow problem with header svg. Add link to conference in video conference button.

--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -58,7 +58,6 @@ p
     align-items: center
 
 .icon
-  overflow: hidden
   svg
     width: 100%
     height: 100%
@@ -73,6 +72,8 @@ p
 
 .icon
   &.right svg, &.left svg
+    @media screen and (max-width: 1200px)
+      transform: scale(1.1) translateY(0)
     @media screen and (max-width: 600px)
       transform: none
 
